overlays/uksouth-prod/devops/pypicloud/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: pypi
  name: pypi
  namespace: default
spec:
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: pypi
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        linkerd.io/inject: enabled
        kubectl.kubernetes.io/default-container: pypi
      labels:
        app: pypi
    spec:
      containers:
        - image: binkcore.azurecr.io/pypi:latest
          name: pypi
          ports:
            - containerPort: 6502
          readinessProbe:
            httpGet:
              path: /health
              port: 6502
            initialDelaySeconds: 30
            periodSeconds: 30
          livenessProbe:
            httpGet:
              path: /health
              port: 6502
            initialDelaySeconds: 60
            periodSeconds: 300
            failureThreshold: 3
          imagePullPolicy: Always
          volumeMounts:
            - name: config
              mountPath: /etc/pypicloud/
              readOnly: true
          resources:
            requests:
              memory: 256Mi
            limits:
              cpu: 2000m
              memory: 256Mi
      imagePullSecrets:
        - name: binkcore.azurecr.io
      dnsPolicy: ClusterFirst
      priorityClassName: bink-medium-tasks
      restartPolicy: Always
      volumes:
        - name: config
          configMap:
            name: pypi
