overlays/uksouth-prod/devops/pypicloud/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: default
  labels:
    app: pypi
  name: pypi
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 6502
  selector:
    app: pypi
  sessionAffinity: None
  type: ClusterIP
