overlays/uksouth-prod/devops/pypicloud/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/service-upstream: 'true'
    nginx.ingress.kubernetes.io/proxy-body-size: 200m
  name: pypi.${cluster_name}.${cluster_location}.bink.sh
  namespace: default
spec:
  rules:
    - host: pypi.${cluster_name}.${cluster_location}.bink.sh
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pypi
                port:
                  number: 80
  tls:
    - hosts:
        - pypi.${cluster_name}.${cluster_location}.bink.sh
